Fix logo sizing without stretching header

--- a/style.css
+++ b/style.css
@@ -29,8 +29,9 @@ header {
 }
 
 .logo {
-  height: 90px;
-  max-width: 100%;
+  max-height: 70px;
+  width: auto;
+  padding: 5px 0;
 }
 
 nav ul {
